--- a/backup_file.html
+++ b/backup_file.html
@@ -2669,6 +2669,8 @@
 
         /* Payment & Insurance Section */
         .payment-section {
+            padding: 80px 0;
+            background: linear-gradient(120deg, #f8f9fa 0%, #e9f4ff 100%);
             position: relative;
             overflow: hidden;
         }
@@ -3938,9 +3940,7 @@
         grid-template-columns: 1fr;
     }
 }
-.halal-vitamins{
-    background: linear-gradient(120deg, #f8f9fa 0%, #e9f4ff 100%);
-}
+
 .halal-highlight {
   display: flex;
   align-items: center;
@@ -4295,16 +4295,14 @@
             </div>
         </div>
 
-        <section class="halal-vitamins">
-            <div class="halal-highlight">
-                <div class="halal-icon">
-                <i class="fas fa-check-circle"></i>
-                </div>
-                <div class="halal-text">
-                We carry halal vitamins also
-                </div>
+        <div class="halal-highlight">
+            <div class="halal-icon">
+            <i class="fas fa-check-circle"></i>
             </div>
-        </section>
+            <div class="halal-text">
+            We carry halal vitamins also
+            </div>
+        </div>
 
         <div class="page3">
             <div class="page3-up">
