--- a/index.html
+++ b/index.html
@@ -4051,7 +4051,92 @@
         font-size: 16px;
     }
 }
-        
+
+/* New styles for the no-image notary row */
+.notary-service-row-no-image {
+    max-width: 1000px; /* Adjusted max-width for better text flow without image */
+    margin: 0 auto;
+    padding: 30px 50px; /* Add internal padding */
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    display: flex; /* Use flexbox to center content */
+    flex-direction: column; /* Stack content vertically */
+    align-items: center; /* Center items horizontally */
+    text-align: center; /* Center text */
+}
+
+.notary-service-row-no-image:hover {
+    transform: translateY(-10px);
+}
+
+.notary-service-row-no-image .text {
+    width: 100%; /* Take full width within its container */
+    padding: 0; /* Remove padding from here as it's on the parent now */
+    display: flex; /* Make this a flex container */
+    flex-direction: column; /* Stack its children */
+    align-items: center; /* Center children horizontally */
+}
+
+.notary-service-row-no-image .text h1 {
+    font-size: 28px;
+    color: var(--primary-color);
+    margin-bottom: 15px;
+}
+
+.notary-service-row-no-image .text h2 {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #555;
+    margin-bottom: 25px;
+}
+
+.notary-service-row-no-image .text a {
+    display: inline-block; /* Keep as inline-block for proper centering */
+    padding: 12px 25px;
+    background-color: var(--primary-color);
+    color: white;
+    border-radius: 5px;
+    font-weight: 600;
+    transition: all 0.3s ease;
+    /* align-self: center; Not needed if text-align: center on parent */
+}
+
+.notary-service-row-no-image .text a:hover {
+    background-color: var(--secondary-color);
+    transform: translateY(-3px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+/* Responsive adjustments for notary section (no image) */
+@media screen and (max-width: 768px) {
+    .notary-service-row-no-image {
+        padding: 25px 30px;
+    }
+    .notary-service-row-no-image .text h1 {
+        font-size: 24px;
+    }
+    .notary-service-row-no-image .text h2 {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .notary-public-section {
+        padding: 60px 0;
+    }
+    .notary-service-row-no-image {
+        padding: 20px 20px;
+    }
+    .notary-service-row-no-image .text h1 {
+        font-size: 22px;
+    }
+    .notary-service-row-no-image .text h2 {
+        font-size: 15px;
+    }
+} 
     </style>
 </head>
 <body>
@@ -4268,6 +4353,21 @@
                 </div>
             </div>
         </div>
+
+        <section class="notary-public-section">
+            <div class="service-heading">
+                <h1>Notary Public Service</h1>
+            </div>
+            <div class="notary-service-row-no-image">
+                <div class="text">
+                    <h1>Reliable Notary Services Available Here</h1>
+                    <h2>
+                        Our certified Notary Public services are fast, reliable, and available when you need important documents notarized.
+                    </h2>
+                    <a href="#">Contact Us for Notary</a>
+                </div>
+            </div>
+        </section>
 
         <div class="page4-services" id="features">
             <div class="service-heading">
@@ -4985,9 +5085,6 @@
             </div>
         </section>
 
-
-        
-  
 
         <!-- Elegant Footer for Premium Pharmacy -->
         <footer class="premium-footer">
