--- a/index.html
+++ b/index.html
@@ -4977,42 +4977,49 @@
 
 
 
-        <!-- Store Hours Section -->
-        <div class="store-hours" id="hours">
-            <div class="store-hours-inner">
-                <div class="hours-heading">
-                    <h1>Store Hours</h1>
-                    <h2>Visit us at your convenience</h2>
-                </div>
-                <div class="hours-container">
-                    <div class="hours-card">
-                        <div class="day-column">
-                            <div class="day">Monday</div>
-                            <div class="day">Tuesday</div>
-                            <div class="day">Wednesday</div>
-                            <div class="day">Thursday</div>
-                            <div class="day">Friday</div>
-                            <div class="day">Saturday</div>
-                            <div class="day sunday">Sunday</div>
-                        </div>
-                        <div class="time-column">
-                            <div class="time">9:00 AM - 6:45 PM</div>
-                            <div class="time">9:00 AM - 6:45 PM</div>
-                            <div class="time">9:00 AM - 6:45 PM</div>
-                            <div class="time">9:00 AM - 6:45 PM</div>
-                            <div class="time">9:00 AM - 6:45 PM</div>
-                            <div class="time">9:00 AM - 5:45 PM</div>
-                            <div class="time">9:00 AM - 3:00 PM</div>
-                            <!--
-                            <div class="time sunday">Closed</div>-->
-                        </div>
+            <!-- Store Hours Section -->
+            <div class="store-hours" id="hours">
+                <div class="store-hours-inner">
+                    <div class="hours-heading">
+                        <h1>Store Hours</h1>
+                        <h2>Visit us at your convenience</h2>
                     </div>
-                    <div class="holiday-notice">
-                        <h3>Holiday Hours</h3>
-                        <p>Hours may vary on holidays. Please call ahead to confirm our schedule for special days and events.</p>
-                        <a href="tel:+13476490996" class="phone-link">
-                            <i class="fa-solid fa-phone"></i> +1 (718) 478-2576
-                        </a>
+                    <div class="hours-container">
+                        <!-- Ramadan Notice with Inline Styles -->
+                        <div class="ramadan-notice" style="background-color: #f7f7f7; padding: 15px; margin-bottom: 20px; border: 1px solid #ddd; border-radius: 5px; text-align: center;">
+                            <h3 style="font-size: 1.2em; color: #d54e21; margin-bottom: 10px;">Ramadan Hours</h3>
+                            <p style="font-size: 1em; color: #333;">Due to Ramadan, our store hours have been adjusted. Please see the updated schedule below. These changes will be in effect until March 18. We will return to our regular hours after this date.</p>
+                        </div>
+                        
+                        <div class="hours-card">
+                            <div class="day-column">
+                                <div class="day">Monday</div>
+                                <div class="day">Tuesday</div>
+                                <div class="day">Wednesday</div>
+                                <div class="day">Thursday</div>
+                                <div class="day">Friday</div>
+                                <div class="day">Saturday</div>
+                                <div class="day sunday">Sunday</div>
+                            </div>
+                            <div class="time-column">
+                                <div class="time">9:00 AM - 5:00 PM</div>
+                                <div class="time">9:00 AM - 5:00 PM</div>
+                                <div class="time">9:00 AM - 5:00 PM</div>
+                                <div class="time">9:00 AM - 5:00 PM</div>
+                                <div class="time">9:00 AM - 5:00 PM</div>
+                                <div class="time">9:00 AM - 4:00 PM</div>
+                                <div class="time">9:00 AM - 2:00 PM</div>
+                                <!--
+                                <div class="time sunday">Closed</div>-->
+                            </div>
+                        </div>
+                        <div class="holiday-notice">
+                            <h3>Holiday Hours</h3>
+                            <p>Hours may vary on holidays. Please call ahead to confirm our schedule for special days and events.</p>
+                            <a href="tel:+13476490996" class="phone-link">
+                                <i class="fa-solid fa-phone"></i> +1 (718) 478-2576
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
