--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="shortcut icon" type="image/x-icon" href="./img/incon.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
-    <!-- Google Translate Script -->
     <!-- Google Translate Script -->
     <script type="text/javascript">
         function googleTranslateElementInit() {
@@ -4213,13 +4211,12 @@
 
                 <!-- Sidebar Navigation -->
                 <div id="sidebar" class="sidebar">
-                    <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">×</a>
-                    <a href="#">Home</a>
-                    <a href="#services">Services</a>
-                    <a href="#features">Features</a>
-                    <a href="#hours">Hours</a>
-                    <a href="https://goo.gl/maps/ke9MqZGYe9ku9Ltd6" target="_blank">Direction</a>
-                    <a href="#contact">Contact</a>
+                    <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
+                    <a href="#" onclick="closeNav()">Home</a>
+                    <a href="#about" onclick="closeNav()">About</a>
+                    <a href="#services" onclick="closeNav()">Services</a>
+                    <a href="#products" onclick="closeNav()">Products</a>
+                    <a href="#contact" onclick="closeNav()">Contact</a>
                 </div>
             </div>
         </div>
@@ -5307,6 +5304,9 @@
         function closeNav() {
             document.getElementById("sidebar").style.width = "0";
         }
+        document.querySelectorAll('.sidebar a').forEach(link => {
+            link.addEventListener('click', closeNav);
+        });
 
         // Smooth scroll for navigation links
         document.addEventListener('DOMContentLoaded', function() {
