--- a/index.html
+++ b/index.html
@@ -4213,9 +4213,9 @@
                 <div id="sidebar" class="sidebar">
                     <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
                     <a href="#" onclick="closeNav()">Home</a>
-                    <a href="#about" onclick="closeNav()">About</a>
-                    <a href="#services" onclick="closeNav()">Services</a>
-                    <a href="#products" onclick="closeNav()">Products</a>
+                    <a href="#services onclick="closeNav()">Services</a>
+                    <a href="#features" onclick="closeNav()">Features</a>
+                    <a href="https://goo.gl/maps/ke9MqZGYe9ku9Ltd6" target="_blank">Direction</a>
                     <a href="#contact" onclick="closeNav()">Contact</a>
                 </div>
             </div>
